fix table overflow inside flex layout, tweak field heading sizes, add spacing and borders to each field output

--- a/web/themes/cesem/src/core/base.css
+++ b/web/themes/cesem/src/core/base.css
@@ -7,10 +7,27 @@
 	color: var(--bg);
 	background-color: var(--highlight);
 }
+
 [disabled] {
 	opacity: .5;
 	cursor: not-allowed;
 }
+
+
+::-webkit-scrollbar {
+	width: 10px
+}
+
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+	background-color: var(--text);
+	border: 2px solid var(--bg);
+	border-radius: 8px;
+}
+
 html {
     font-family: var(--ff-sans);
 	font-size: 100%;
@@ -22,6 +39,8 @@ html {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	box-sizing: border-box;
+	scrollbar-width: thin;
+	scrollbar-color: var(--text) transparent;
 }
 
 @media (prefers-reduced-motion: no-preference) {
