--- a/web/themes/cesem/src/editor.css
+++ b/web/themes/cesem/src/editor.css
@@ -1,12 +1,22 @@
 /* default styles for content generated by a WYSIWYG*/
 
+article > .field {
+    padding-block-end: 1rem;
+    border-bottom: 1px solid var(--border);
+    
+    & + .field {
+        margin-block-start: 2rem;
+    }
+}
+
 .editor, article > .field {
     & h2 {
-        font-size: var(--fs3);
+        font-size: var(--fs5);
+        font-weight: 600;
     }
 
     & h3 {
-        font-size: var(--fs4)
+        font-size: var(--fs-body)
     }
 
     & :is(h2, h3) {
