--- a/web/themes/cesem/src/header.css
+++ b/web/themes/cesem/src/header.css
@@ -18,9 +18,9 @@ header {
         }
         
         & span {
-            font-size: clamp(0.58rem, 0.298rem + 1.41vw, 1.25rem);
+            font-size: clamp(0.58rem, 0.351rem + 1.15vw, 1.125rem);
             font-weight: 600;
-            line-height: var(--lh-solid);
+            line-height: var(--lh-title);
             max-inline-size: 15ch;
         }
 
