--- a/web/themes/cesem/src/views.css
+++ b/web/themes/cesem/src/views.css
@@ -21,6 +21,7 @@
     & .view-content {
         inline-size: 100%;
         flex-grow: 2;
+        min-inline-size: 0;
     }
 
     & .view-filters label {
